--- a/resumates/package.json
+++ b/resumates/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resumates",
-   "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3001",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^12.8.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "serve-favicon": "^2.5.0",
     "web-vitals": "^1.1.2"
